set overflow as hidden for html, body tags to fix issue with horizontal scroll on pages

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -8,6 +8,12 @@
   box-sizing: border-box;
 }
 
+
+html,
+body {
+  overflow-x: hidden;
+}
+
 /*
  * 1. prevent chrome from hiding background images and colors by default when printing
  */
